# Unfumble

./: .gitignore  README.md  start.sh
.github/workflows/: python.yml
docs/: integration-notes-for-java.md
docs/contracts/: ai-engine.openapi.yaml
infra/: docker-compose.yml
services/ai-engine/: .env.example  Dockerfile  pyproject.toml
services/ai-engine/app/: main.py
services/ai-engine/app/api/v1/routers/: upload.py
services/ai-engine/app/core/: celery_app.py  config.py  db.py
services/ai-engine/app/models/: job.py  orm.py
services/ai-engine/app/services/: image_editor.py  prompt.py  storage.py
services/ai-engine/app/workers/: tasks.py
services/frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
services/frontend/src/components/: BeforeAfterReveal.astro  Footer.astro  Hero.astro  HowItWorks.astro  Navbar.astro  ThreeCanvas.astro  UseCaseCards.astro  WhyUnfumble.astro
services/frontend/src/layouts/: Base.astro
services/frontend/src/pages/: index.astro
services/frontend/src/pages/app/: index.astro
services/frontend/src/styles/: global.css
services/gateway/: .env.example  mvnw.cmd  pom.xml
services/gateway/src/main/java/com/headshot/gateway/: GatewayApplication.java  HealthController.java
services/gateway/src/main/java/com/unfumble/gateway/: GatewayApplication.java  HealthController.java
services/gateway/src/main/resources/: application.yml
services/gateway/src/test/java/com/headshot/gateway/: GatewayApplicationTests.java
services/gateway/src/test/resources/: application-test.yml
(+27 files in other folders)
