[project]
name = "ai-engine"
version = "0.1.0"
description = "UnFumble AI Engine — image-editing AI integration, prompt building, async job processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "boto3>=1.35",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "celery>=5.4.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
